--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,45 @@
+# Numerous always-ignore extensions
+*.diff
+*.err
+*.orig
+*.log
+*.rej
+*.swo
+*.swp
+*.zip
+*.rar
+*.vi
+*.todo
+*~
+
+# OS or Editor folders
+.DS_Store
+._*
+Thumbs.db
+.cache
+.project
+.settings
+.tmproj
+*.esproj
+nbproject
+*.sublime-project
+*.sublime-workspace
+.idea
+
+# Folders to ignore
+.sass-cache
+.tmp
 node_modules
-dev
+bower_components
+*/**/node_modules
+*/**/bower_components
+site/lib
+*.todo
+*/**/*.todo
+
+builds
+node_modules
+docs
 .DS_Store
 ._.DS_Store
 
@@ -14,5 +54,3 @@ phantomjsdriver.log
 **/sprite_96.*
 **/svg-fallback-sprite.*
 **/svg-sprite.*
-
-.vscode
